src/test/ui/consts/const-eval/pub_const_err.stderr
error: attempt to subtract with overflow
  --> $DIR/pub_const_err.rs:13:22
   |
LL | pub type Foo = [i32; 0 - 1];
   |                      ^^^^^
   |
   = note: #[deny(const_err)] on by default

error: could not evaluate constant expression
  --> $DIR/pub_const_err.rs:13:16
   |
LL | pub type Foo = [i32; 0 - 1];
   |                ^^^^^^-----^
   |                      |
   |                      attempt to subtract with overflow
   |
   = note: #[deny(type_alias_missing_bounds)] on by default
   = help: missing bounds in type aliases were previously allowed
   = help: this is a hard error in Rust 2018

error: aborting due to 2 previous errors

